# INI-Parser

./: .gitignore  CMakeLists.txt  INI-Parser.h  README.md  README_CN.md
Demo/: Complex.ini  Demo.cpp  Demo.ini  Output.ini  Test.ini
